--- a/src/server/web/views/user.pug
+++ b/src/server/web/views/user.pug
@@ -35,3 +35,8 @@ block meta
 			link(rel='alternate' href=`${url}.rss` type='application/rss+xml')
 		if !user.host
 			link(rel='alternate' href=`${url}.json` type='application/json')
+
+block content
+	div#me(style={ display: 'none' })
+		each m in me
+			a(rel='me' href=`${m}`) #{m}
